--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
       </div>
 
-      <button class="generic-button" data-bind="click: resetMap ">Reset Map Lacations</button>
+      <button id="reset-map-button" class="generic-button" data-bind="click: resetMap ">Reset Map Lacations</button>
 
       <div id="loading-image">
         <img class="responsive" src="images/loading.gif">
@@ -46,4 +46,3 @@
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html> 
-jquery.js
